welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:1: error: illegal start of statement
def redTicket(a:Int, b:Int, c:Int):Int = {match (a,b,c) {
                                          ^